# KGS

./: .gitignore  CMakeLists.txt  CTKTimer.cpp  CTKTimer.h  Color.cpp  Color.h  DisjointSets.cpp  DisjointSets.h  HbondIdentifier.cpp  HbondIdentifier.h  IO.cpp  IO.h  JacobianRelated.cpp  JacobianRelated.h  KGSExceptions.cpp  KGSExceptions.h  LICENSE  LICENSE.TXT  Logger.cpp  Logger.h  README.md  ResidueProfiles.h  RunFirst.cpp  RunFirst.h  SamplingOptions.cpp  SamplingOptions.h  Selection.cpp  Selection.h  SiteID.h  Util.cpp  Util.h  freeMKL.cpp  freeMKL.h
applications/: MainEnsemblePCA.cpp  MainExplore.cpp  MainHierarchy.cpp  MainKGS.cpp  MainLoopExplore.cpp  MainMCMC.cpp  MainRelativeTransition.cpp  MainRigidity.cpp  MainRmsd.cpp  MainSugarAnalyzer.cpp  MainTest.cpp  MainTestExactIK.cpp  MainTorsionPrinter.cpp  MainTransition.cpp
core/: Atom.cpp  Atom.h  Bond.cpp  Bond.h  Chain.cpp  Chain.h  Configuration.cpp  Configuration.h  Coordinate.cpp  Grid.cpp  Grid.h  HBond.cpp  HBond.h  Molecule.cpp  Molecule.h  ProteinHBond.cpp  ProteinHBond.h  Residue.cpp  Residue.h  Rigidbody.cpp  Rigidbody.h  RigidbodyGraph.cpp  RigidbodyGraph.h  SugarVertex.cpp  SugarVertex.h  Transformation.cpp  Transformation.h
directions/: BlendedDirection.cpp  BlendedDirection.h  DihedralDirection.cpp  DihedralDirection.h  Direction.h  LSNrelativeDirection.cpp  LSNrelativeDirection.h  LSNullspaceDirection.cpp  LSNullspaceDirection.h  MSDDirection.cpp  MSDDirection.h  MixedDirection.cpp  MixedDirection.h  RandomDirection.cpp  RandomDirection.h  VDWDirection.cpp  VDWDirection.h
examples/: Makefile_explore  Makefile_rigidity  Makefile_transition
loopclosure/: ExactIK.cpp  ExactIK.h
math/: CudaSVD.cpp  GSLQR.cpp  GSLQR.h  GSLSVD.cpp  GSLSVD.h  MKLQR.cpp  MKLQR.h  MKLSVD.cpp  MKLSVD.h  MathUtility.cpp  MathUtility.h  Nullspace.cpp  Nullspace.h  NullspaceQR.cpp  NullspaceQR.h  NullspaceSVD.cpp  NullspaceSVD.h  QR.cpp  QR.h  QRGSL.h  QRMKL.cpp  QRTranspose.cpp  QRTranspose.h  SVD.cpp  SVD.h  SVDGSL.h  SVDMKL.cpp  SVDMKL.h  TransposeQR.cpp  TransposeQR.h  gsl_helpers.cpp  gsl_helpers.h  infnan.h  math.h
math3d/: primitives.h
metrics/: Dihedral.cpp  Dihedral.h  Metric.cpp  Metric.h  RMSD.cpp  RMSD.h  RMSDnosuper.cpp  RMSDnosuper.h
moves/: ClashAvoidingMove.cpp  ClashAvoidingMove.h  CompositeMove.cpp  DecreaseStepMove.h  FastClashAvoidingMove.cpp  FastClashAvoidingMove.h  Move.cpp  Move.h  NullspaceMove.cpp  NullspaceMove.h  RawMove.cpp  RebuildMove.cpp  RebuildMove.h  SlowClashAvoidingMove.cpp  SlowClashAvoidingMove.h
scripts/: PDB.py  (+57 more)
src/: CMakeLists.txt  CTKTimer.cpp  CTKTimer.h  Color.cpp  Color.h  DisjointSets.cpp  DisjointSets.h  HbondIdentifier.cpp  HbondIdentifier.h  IO.cpp  IO.h  JacobianRelated.cpp  JacobianRelated.h  KGSExceptions.cpp  KGSExceptions.h  Logger.cpp  Logger.h  README.md  ResidueProfiles.h  Selection.cpp  Selection.h  SiteID.h  Util.cpp  Util.h  freeMKL.cpp  freeMKL.h
src/applications/: MainAlign.cpp  MainDeer.cpp  MainEnsemblePCA.cpp  MainExplore.cpp  MainHierarchy.cpp  MainLoopExplore.cpp  MainMCMC.cpp  MainRelativeTransition.cpp  MainRigidity.cpp  MainRmsd.cpp  MainSugarAnalyzer.cpp  MainTest.cpp  MainTorsionPrinter.cpp  MainTransition.cpp
src/applications/options/: AlignOptions.cpp  AlignOptions.h  ApplicationOptions.cpp  ApplicationOptions.h  DeerOptions.cpp  DeerOptions.h  ExploreOptions.cpp  ExploreOptions.h  HierarchyOptions.cpp  HierarchyOptions.h  RelativeTransitionOptions.cpp  RelativeTransitionOptions.h  RigidityOptions.cpp  RigidityOptions.h  TransitionOptions.cpp  TransitionOptions.h
src/core/: Atom.cpp  Atom.h  Bond.cpp  Bond.h  Chain.cpp  Chain.h  Configuration.cpp  Configuration.h  ConstraintSet.cpp  ConstraintSet.h  Coordinate.cpp  Coordinate.h  DBond.cpp  DBond.h  Grid.cpp  Grid.h  HBond.cpp  HBond.h  HydrophobicBond.cpp  HydrophobicBond.h  Molecule.cpp  Molecule.h  Residue.cpp  Residue.h  Rigidbody.cpp  Rigidbody.h  Transformation.cpp  Transformation.h
src/core/dofs/: DOF.cpp  DOF.h  FixedLink.cpp  FixedLink.h  GlobalRotateDOF.cpp  GlobalRotateDOF.h  GlobalTranslateDOF.cpp  GlobalTranslateDOF.h  TorsionDOF.cpp  TorsionDOF.h
src/core/graph/: Constraint.cpp  Constraint.h  KinEdge.cpp  KinEdge.h  KinGraph.cpp  KinGraph.h  KinTree.cpp  KinTree.h  KinVertex.cpp  KinVertex.h
src/deer/: ProbeSampler.cpp  ProbeSampler.h
src/directions/: AtomPairDistanceDirection.cpp  AtomPairDistanceDirection.h  BlendedDirection.cpp  BlendedDirection.h  DihedralDirection.cpp  DihedralDirection.h  Direction.cpp  Direction.h  LSNrelativeDirection.cpp  LSNrelativeDirection.h  LSNullspaceDirection.cpp  LSNullspaceDirection.h  MSDDirection.cpp  MSDDirection.h  RandomDirection.cpp  RandomDirection.h  RelativeMSDDirection.cpp  RelativeMSDDirection.h  VDWDirection.cpp  VDWDirection.h
src/loopclosure/: ExactIK.cpp  ExactIK.h
src/math/: CULASVD.cpp  CULASVD.h  CudaSVD.h  MathUtility.h  Nullspace.cpp  Nullspace.h  NullspaceQR.cpp  NullspaceQR.h  NullspaceSVD.cpp  NullspaceSVD.h  QR.h  QRGSL.cpp  QRMKL.cpp  QRMKL.h  SVD.cpp  SVDGSL.cpp  gsl_helpers.cpp  gsl_helpers.h  math.h
src/math3d/: primitives.cpp  primitives.h
src/metrics/: Dihedral.cpp  Dihedral.h  Metric.cpp  Metric.h  RMSD.cpp  RMSD.h  RMSDnosuper.cpp  RMSDnosuper.h
src/moves/: ClashAvoidingMove.cpp  ClashAvoidingMove.h  CompositeMove.cpp  CompositeMove.h  DecreaseStepMove.cpp  DecreaseStepMove.h  FastClashAvoidingMove.cpp  FastClashAvoidingMove.h  LSNclashAvoidingMove.cpp  LSNclashAvoidingMove.h  Move.cpp  Move.h  NullspaceMove.cpp  NullspaceMove.h  RawMove.cpp  RawMove.h  RebuildMove.cpp  RebuildMove.h
src/planners/: BidirectionalMovingFront.cpp  BidirectionalMovingFront.h  DEERPlanner.cpp  DEERPlanner.h  DihedralRRT.cpp  DihedralRRT.h  MCMCPlanner.cpp  MCMCPlanner.h  PoissonPlanner.cpp  PoissonPlanner.h  PoissonPlanner2.cpp  PoissonPlanner2.h  RRTPlanner.cpp  RRTPlanner.h  SamplingPlanner.cpp  SamplingPlanner.h
src/tests/: AllTests.cpp  AllTests.h  TestDummy.cpp  TestDummy.h  TestLocalRebuild.cpp  TestLocalRebuild.h  TestMathUtility.cpp  TestMathUtility.h  TestSugarPucker.cpp  TestSugarPucker.h  TestSuite.h
(+68 files in other folders)
